# hid-api-rs

./: .gitignore  Cargo.toml  README.md  example_gadget.sh
src/: hid.rs  lib.rs
src/example/: bin-generic.rs  bin-injection.rs  bin-keyboard.rs  bin-mouse.rs  bin.rs
src/gadgets/: keyboard.rs  mouse.rs
