[package]
name = "hid-api-rs"
description = "HID & GadgetFs hardware passthrough for injecting keyboard/mouse inputs."
version = "1.0.3"
edition = "2021"
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/StrateimTech/hid-api-rs"
authors = ["Etho"]
keywords = ["hid", "utility", "usb", "mouse", "keyboard"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
once_cell = "1.18.0"

num_enum = "0.6.1"
strum = "0.24.1"
strum_macros = "0.24.3"

[lib]
name = "hid_api_rs"
path = "src/lib.rs"

[[bin]]
name = "hid_api_example"
path = "src/example/bin.rs"