[package]
name = "hid-api-rs"
description = "Hardware proxy for injecting & intercepting keyboard/mouse inputs"
version = "3.0.1"
edition = "2021"
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/StrateimTech/hid-api-rs"
authors = ["Etho"]
keywords = ["hid", "linux", "usb", "mouse", "keyboard"]
categories = ["api-bindings", "hardware-support", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
once_cell = "1.18.0"

num_enum = "0.7.2"
strum = "0.25.0"
strum_macros = "0.25.3"

[lib]
name = "hid_api_rs"
path = "src/lib.rs"

[[bin]]
name = "hid_api_example"
path = "src/example/bin-generic.rs"

[[bin]]
name = "hid_api_example_mouse"
path = "src/example/bin-mouse.rs"

[[bin]]
name = "hid_api_example_injection"
path = "src/example/bin-injection.rs"